[package]
name = "ogr2arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
arrow = "19.0.0"
binread = "2.2.0"
chrono = "0.4.20"
fallible-iterator = "0.2.0"
json = "0.12.4"
modular-bitfield = "0.11.2"
nom = "7.1.1"
rusqlite = { version = "0.28.0", features = ["column_decltype", "chrono", "blob"] }
serde = "1.0.142"
serde_derive = "1.0.142"
serde_json = "1.0.83"
tokio = { version = "1.20.3", features = ["macros"] }
